# SciREX

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  main.yml
api/experimental/Contribution/contribution/: index.html
api/experimental/examples/dl/cnn_mnist/: index.html
api/experimental/examples/dl/gcn_cora/: index.html
api/experimental/examples/dl/vae_mnist/: index.html
api/experimental/examples/model compression/pruned_base_mnist/: index.html
api/experimental/examples/model compression/pruned_mnist/: index.html
api/experimental/examples/model compression/quantized_base_mnist/: index.html
api/experimental/examples/model compression/quantized_mnist/: index.html
api/experimental/model_compression/pruning/: index.html
api/experimental/model_compression/quantization/: index.html
api/transformers/: index.html
assets/: custom.css  custom.js
docs/api/core/dl/: base.md  fcnn.md  gcn.md  mlp.md  tensorflow_wrapper.md
docs/api/core/dl/layer/: attention.md  convolution.md  dropout.md  embeddings.md  linear.md  normalisation.md  pooling.md  recurrent.md  sequential.md
docs/api/core/dl/nn/: activation.md  loss.md  metrics.md  others.md
docs/api/core/model_compression/: pruning.md  quantization.md
docs/api/core/sciml/fe/: basis_2d_QN_Chebyshev_2.md  basis_2d_QN_Jacobi.md  basis_2d_QN_Legendre.md  basis_2d_QN_Legendre_Special.md  basis_function_2d.md  basis_function_3d.md  fe2d_cell.md  fe2d_setup_main.md  fe_transformation_2d.md  fe_transformation_3d.md  fespace.md  fespace2d.md  quad_affine.md  quad_bilinear.md  quadratureformulas.md  quadratureformulas_quad2d.md
docs/api/core/sciml/geometry/: geometry.md  geometry_2d.md
docs/api/data/: index.md
docs/api/diffusion/: index.md
docs/api/training/: index.md
docs/api/transformers/: index.md
examples/: README.md
examples/dl/: README.md  gcn_cora.py
examples/experimental/: README.md
examples/experimental/dl/: cnn_mnist.py  vae_mnist.py
examples/experimental/ml/supervised/classification/: README.md  example_naive_bayes.py
examples/experimental/ml/supervised/regression/: example_linear_regression.py  example_polynomial_regression.py  example_svr.py
examples/experimental/ml/unsupervised/clustering/: example_kmeans.py
examples/experimental/model_compression/: pruned_base_mnist.py  quantized_base_mnist.py
examples/experimental/sciml/fastvpinns/forward_problems/: example_helmholtz2d.py
examples/experimental/sciml/fastvpinns/inverse_problems/: example_inverse_poisson2d.py
examples/experimental/sciml/pinns/forward_problems/: example_poisson2d.py
examples/experimental/sciml/super_resolution/experiments_pdes/: example_advection.py
examples/ml/supervised/classification/: example_logistic_regression.py
examples/ml/supervised/regression/: example_lasso_regression.py  example_ridge_regression.py
examples/ml/unsupervised/clustering/: README.md
examples/model_compression/: pruned_mnist.py  quantized_mnist.py
examples/sciml/fastvpinns/forward_problems/: example_poisson2d.py
examples/sciml/fastvpinns/inverse_problems/: example_inverse_poisson2d.md
examples/sciml/pinns/forward_problems/: example_maxwell.py  example_permafrost.py
examples/sciml/super_resolution/experiments_pdes/: example_burgers.py  example_heat.py  example_poisson_2d.py  example_wave.py
examples/simple/: README.md  digit_generation.py  machine_translation.py  text_classification.py  toy_diffusion.ipynb  toy_diffusion.py
scirex/data/: README.md  __init__.py  loaders.py
scirex/diffusion/: README.md  __init__.py  forward.py  helpers.py  reverse.py
scirex/experimental/: README.md
scirex/training/: README.md  __init__.py  trainer.py  utils.py
scirex/transformers/: README.md  __init__.py  blocks.py  embeddings.py  models.py  transformer.py  unet.py
search/: search_index.json
tests/: test_diffusion_helpers.py
tests/scirex/data/: test_loaders.py
tests/scirex/diffusion/: test_diffusion.py
tests/scirex/training/: test_trainer.py
tests/scirex/transformers/: test_blocks.py  test_embeddings.py  test_models.py  test_unet.py
tests/transformers/: test_transformer.py
(+114 files in other folders)
